--- a/src/IconPacks.Browser/Styles/CustomTabControl.xaml
+++ b/src/IconPacks.Browser/Styles/CustomTabControl.xaml
@@ -1,11 +1,11 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:behaviours="http://metro.mahapps.com/winfx/xaml/shared"
-                    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+                    xmlns:controls="clr-namespace:WpfToolkit.Controls;assembly=VirtualizingWrapPanel"
                     xmlns:converter="clr-namespace:MahApps.Metro.IconPacks.Converter;assembly=MahApps.Metro.IconPacks.Core"
                     xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
-                    xmlns:viewModels="clr-namespace:IconPacks.Browser.ViewModels"
-                    xmlns:controls="clr-namespace:WpfToolkit.Controls;assembly=VirtualizingWrapPanel">
+                    xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
+                    xmlns:viewModels="clr-namespace:IconPacks.Browser.ViewModels">
 
     <SolidColorBrush x:Key="TabItemPanelBackgroundBrush" Color="{DynamicResource MahApps.Colors.Gray8}" />
     <SolidColorBrush x:Key="TabItemBackgroundIsSelectedBrush" Color="{DynamicResource MahApps.Colors.Gray2}" />
@@ -659,23 +659,23 @@
                      Margin="2"
                      FocusVisualStyle="{x:Null}"
                      ItemsSource="{Binding Icons}"
-                     SelectedValue="{Binding SelectedIcon, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=False, NotifyOnValidationError=False}"
-                     Style="{DynamicResource MahApps.Styles.ListBox.Virtualized}"
-                     VirtualizingPanel.CacheLengthUnit="Item"
-                     VirtualizingPanel.ScrollUnit="Item"
-                     VirtualizingPanel.VirtualizationMode="Recycling"
                      ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                      ScrollViewer.VerticalScrollBarVisibility="Auto"
-                     Validation.ErrorTemplate="{x:Null}">
+                     SelectedValue="{Binding SelectedIcon, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnNotifyDataErrors=False, NotifyOnValidationError=False}"
+                     Style="{DynamicResource MahApps.Styles.ListBox.Virtualized}"
+                     Validation.ErrorTemplate="{x:Null}"
+                     VirtualizingPanel.CacheLengthUnit="Item"
+                     VirtualizingPanel.ScrollUnit="Item"
+                     VirtualizingPanel.VirtualizationMode="Recycling">
                 <ListBox.ItemsPanel>
                     <ItemsPanelTemplate>
-                        <controls:VirtualizingWrapPanel Orientation="Vertical"
-                                                        SpacingMode="BetweenItemsOnly"
-                                                        StretchItems="False"
-                                                        ScrollLineDelta="1"
+                        <controls:VirtualizingWrapPanel IsItemsHost="True"
+                                                        ItemSize="128,128"
                                                         MouseWheelDelta="1"
-                                                        IsItemsHost="True"
-                                                        ItemSize="128,128" />
+                                                        Orientation="Vertical"
+                                                        ScrollLineDelta="1"
+                                                        SpacingMode="BetweenItemsOnly"
+                                                        StretchItems="False" />
                     </ItemsPanelTemplate>
                 </ListBox.ItemsPanel>
                 <ListBox.ItemTemplate>
@@ -1278,9 +1278,9 @@
                                 KeyboardNavigation.TabNavigation="Local"
                                 SnapsToDevicePixels="{TemplateBinding SnapsToDevicePixels}">
                             <mah:TransitioningContentControl behaviours:ReloadBehavior.OnSelectedTabChanged="True"
-                                                                  RestartTransitionOnContentChange="True"
-                                                                  Transition="{TemplateBinding mah:TabControlHelper.Transition}"
-                                                                  UseLayoutRounding="True">
+                                                             RestartTransitionOnContentChange="True"
+                                                             Transition="{TemplateBinding mah:TabControlHelper.Transition}"
+                                                             UseLayoutRounding="True">
                                 <ContentPresenter x:Name="PART_SelectedContentHost"
                                                   Margin="{TemplateBinding Padding}"
                                                   ContentSource="SelectedContent"
