--- a/src/IconPacks.Browser/Styles/ScrollViewerWin10.xaml
+++ b/src/IconPacks.Browser/Styles/ScrollViewerWin10.xaml
@@ -1,8 +1,8 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:system="clr-namespace:System;assembly=mscorlib"
                     xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
-                    xmlns:options="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options">
+                    xmlns:options="http://schemas.microsoft.com/winfx/2006/xaml/presentation/options"
+                    xmlns:system="clr-namespace:System;assembly=mscorlib">
 
     <system:Double x:Key="IconPacksBrowser.Sizes.ScrollBar.Height">14</system:Double>
     <system:Double x:Key="IconPacksBrowser.Sizes.ScrollBar.Width">14</system:Double>
